# antimine-android

./:  robolectric.properties  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  build.gradle  build.gradle.kts  config.gradle  detekt.yml  gradle.properties  lint.xml  privacy_policy.md  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: android.yml
about/: build.gradle  build.gradle.kts
app/: build.gradle  build.gradle.kts  fabric.properties  mapping.txt  proguard-rules.pro
audio/: build.gradle  build.gradle.kts
audio-low/: build.gradle  build.gradle.kts
auto/: build.gradle.kts
automotive/: build.gradle
common/: build.gradle  build.gradle.kts  proguard-rules.pro
control/: build.gradle  build.gradle.kts
core/: build.gradle  build.gradle.kts
donation/: build.gradle  build.gradle.kts
foss/: build.gradle  build.gradle.kts  proguard-rules.pro
gdx/: build.gradle  build.gradle.kts  check_import.sh
gradle/: libs.versions.toml
i18n/: build.gradle  build.gradle.kts
instant/: build.gradle  build.gradle.kts
preferences/: build.gradle  build.gradle.kts
proprietary/: build.gradle  build.gradle.kts  proguard-rules.pro
purchases/: build.gradle
sgtatham/: build.gradle  build.gradle.kts
sgtatham/src/main/cpp/: CMakeLists.txt  common.h  malloc.h  minefield_creator.cpp  minefield_creator.h  minefield_solver.h  random_generator.cpp  random_generator.h  sgtatham.cpp  tree234.cpp  tree234.h
textures/: packer.tpproj
themes/: build.gradle  build.gradle.kts  proguard-rules.pro
tutorial/: build.gradle  build.gradle.kts
ui/: build.gradle  build.gradle.kts  proguard-rules.pro
utils/: build.gradle.kts
wear/: build.gradle  build.gradle.kts  proguard-rules.pro
(+1138 files in other folders)
